Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
-</body>
+  <div class="wrapper">
+    <h1>Front page</h1>
+      <img src="https://s3.amazonaws.com/ironboard-learn/sad_meme.jpg" alt="sad teen">
+    </div>
+  </body>
 </html>
