--- a/index.html
+++ b/index.html
@@ -29,3 +29,19 @@
     </div>
   </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>HTML Images</title>
+</head>
+<body>
+  <div class="wrapper">
+    <h1>Front page</h1>
+      <img src="https://s3.amazonaws.com/ironboard-learn/sad_meme.jpg" alt="sad teen" title="We're here to cry with you!">
+    </div>
+  </body>
+</html>
